--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "dependencies": {
     "next": "^12.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.6.4"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8"
   }
 }
