--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^12.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.3.1",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
