--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
-    "next": "^12.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^12.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "typescript": "^4.6.4"
   },
